# cptoyc

./: .gitignore  CMakeLists.txt  Diagnostic.cpp  DirectoryLookup.h  FileManager.cpp  FileManager.h  HeaderMap.cpp  HeaderMap.h  HeaderSearch.cpp  HeaderSearch.h  IdentifierTable.cpp  IdentifierTable.h  LexDiagnostic.h  LiteralSupport.cpp  LiteralSupport.h  MacroArgs.cpp  MacroArgs.h  MacroInfo.h  MemoryBuffer.cpp  MultipleIncludeOpt.h  PPCallbacks.h  PPDirectives.cpp  PPExpressions.cpp  PPLexerChange.cpp  PPMacroExpansion.cpp  Preprocessor.cpp  Preprocessor.h  PreprocessorLexer.cpp  PreprocessorLexer.h  ScratchBuffer.cpp  ScratchBuffer.h  SourceLocation.cpp  SourceLocation.h  SourceManager.cpp  SourceManager.h  TokenKinds.def  TokenKinds.h  TokenLexer.cpp  TokenLexer.h  ast.cpp  (+16 more)
Basic/: CMakeLists.txt  Diagnostic.cpp  Diagnostic.h  DiagnosticGroups.inc  FileManager.cpp  FileManager.h  HeaderMap.cpp  HeaderMap.h  HeaderSearch.cpp  HeaderSearch.h  IdentifierTable.cpp  IdentifierTable.h  LangOptions.h  SourceLocation.h  SourceManager.h  TokenKinds.cpp  TokenKinds.def
Frontend/: CMakeLists.txt  InitHeaderSearch.cpp  InitHeaderSearch.h  PrintPreprocessedOutput.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticBuffer.h  Utils.h
Lex/: CMakeLists.txt  DirectoryLookup.h  LexDiagnostic.h  LiteralSupport.cpp  LiteralSupport.h  MacroArgs.cpp  MacroInfo.cpp  MacroInfo.h  PPCaching.cpp  PPCallbacks.h  PPDirectives.cpp  PPExpressions.cpp  PPLexerChange.cpp  PPMacroExpansion.cpp  Preprocessor.cpp  Preprocessor.h  PreprocessorLexer.cpp  PreprocessorLexer.h  ScratchBuffer.cpp  ScratchBuffer.h  TokenConcatenation.cpp  TokenConcatenation.h  TokenLexer.cpp  TokenLexer.h  lexer.cpp  lexer.h  token.h
doc/: design.md
example/: nqueen.c
llvm/: APFloat.cpp  APFloat.h  APInt.cpp  APInt.h  APSInt.cpp  APSInt.h  AlignOf.h  Allocator.cpp  Allocator.h  CMakeLists.txt  DenseMap.h  DenseMapInfo.h  DenseSet.h  FoldingSet.cpp  FoldingSet.h  Format.h  FormattedStream.cpp  FormattedStream.h  ImmutableList.h  ImmutableMap.h  ImmutableSet.h  MathExtras.h  MemoryBuffer.cpp  MemoryBuffer.h  PointerIntPair.h  PointerLikeTypeTraits.h  PointerUnion.h  Process.cpp  Process.h  STLExtras.h  ScopedHashTable.h  SetVector.h  SmallPtrSet.cpp  SmallPtrSet.h  SmallSet.h  SmallString.h  SmallVector.h  SparseBitVector.h  StringExtras.cpp  StringExtras.h  (+7 more)
